--- a/light.css
+++ b/light.css
@@ -1,4 +1,4 @@
-@import url("https://css.cloud8.top:88/css/css/all.css");
+@import url("https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@0ac23ca/css/all.css");
 .material-icons {
   font-family: "Font Awesome 5 Pro";
   font-weight: 300;
