--- a/default.css
+++ b/default.css
@@ -23,7 +23,7 @@ h4 {
 
 #indexPage .raised.emby-button:hover {
   background: rgb(0, 0, 0, 0.75) !important;
-  box-shadow: 0px 5px 9px 0px black;
+  box-shadow: 0px 5px 9px 0px black;  
 }
 
 .section0 .itemsContainer.scrollSlider.focuscontainer-x.animatedScrollX {
@@ -933,7 +933,7 @@ h2 {
 
 /*光标移动到目标上的显示效果 */
 .upNextDialog {
-  -webkit-backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);  
   backdrop-filter: blur(15px);
   box-shadow: 0 0 8px 5px black;
 }
@@ -1451,7 +1451,7 @@ h2 {
 
 .section0 button.itemAction.textActionButton {
   height: 2.5em;
-  background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0);  
   border-radius: 10px;
 }
 
@@ -1582,7 +1582,7 @@ html:not(.layout-mobile) #loginPage .inputLabel:not(.inputLabel-float) {
 /*登录页面主题*/
 
 #loginPage {
-  background: url(https://04826d.cn/haoyu/css/login.png),
+  background: url(https://cdn.jsdelivr.net/gh/mastyu/css@main/login.png),      
     radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   background-size: cover !important;
   background-blend-mode: overlay;
@@ -1611,7 +1611,7 @@ div#divUsers {
   padding: 2em 2em !important;
   border-radius: 20px;
   -webkit-backdrop-filter: bl1ur(10px);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);  
 }
 
 /* 移动端登录背景 样式 */
